--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Equilibrium #3429
+  <div class="nft-preview-container">
+    <div class="nft-image">
+      <img src="images/image-equilibrium.jpg" alt="">
+    </div>
+    <div class="nft-info">
+      <p>Equilibrium #3429</p>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+    </div>
+    <div class="nft-info__price-date">
+      <p>0.041 ETH</p>
+      <p>3 days left</p>
+    </div>
+    <div class="nft-creator">
+      <img src="" alt="">
+      <p>Creation of Jules Wyvern</p>
+    </div>
+  </div>
 
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/alfonso-ramos">Poncho Ramos</a>.
   </div>
 </body>
 </html>
