--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 <body>
@@ -15,23 +20,23 @@
       <img src="images/image-equilibrium.jpg" alt="">
     </div>
     <div class="nft-info">
-      <p>Equilibrium #3429</p>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <p class="white__text weight-600">Equilibrium #3429</p>
+      <p class="soft-blue__text weight-300">Our Equilibrium collection promotes balance and calm.</p>
     </div>
     <div class="nft-info__price-date">
-      <p>0.041 ETH</p>
-      <p>3 days left</p>
+      <p class="cyan__text weight-600"><span><img src="images/icon-ethereum.svg" alt=""></span> 0.041 ETH</p>
+      <p class="soft-blue__text weight-400">3 days left</p>
     </div>
     <div class="nft-creator">
-      <img src="" alt="">
-      <p>Creation of Jules Wyvern</p>
+      <img src="images/image-avatar.png" alt="Jules Wyvern">
+      <p class="soft-blue__text weight-400">Creation of <span class="white__text">Jules Wyvern</span> </p>
     </div>
   </div>
 
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/alfonso-ramos">Poncho Ramos</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br>
+    Coded by <a href="https://www.frontendmentor.io/profile/alfonso-ramos" target="_blank">Poncho Ramos</a>.
   </div>
 </body>
 </html>
