[ADD] Completado el proyecto, estilos finalizados, el nombre de las clases podria cambiar

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 <body>
 
   <div class="nft-preview-container">
-    <div class="nft-image">
-      <img src="images/image-equilibrium.jpg" alt="">
+    <div class="nft-image-container">
+      <a href="#">
+        <div class="view_nft">
+        </div>
+        <img src="images/image-equilibrium.jpg" alt="nft" class="nft-image">
+      </a>
     </div>
     <div class="nft-info">
-      <p class="white__text weight-600">Equilibrium #3429</p>
+      <p class="white__text weight-600 hover-text">Equilibrium #3429</p>
       <p class="soft-blue__text weight-300">Our Equilibrium collection promotes balance and calm.</p>
     </div>
     <div class="nft-info__price-date">
@@ -29,7 +33,7 @@
     </div>
     <div class="nft-creator">
       <img src="images/image-avatar.png" alt="Jules Wyvern">
-      <p class="soft-blue__text weight-400">Creation of <span class="white__text">Jules Wyvern</span> </p>
+      <p class="soft-blue__text weight-400">Creation of <span class="white__text hover-text">Jules Wyvern</span> </p>
     </div>
   </div>
 
